--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,51 @@
-body {
-  background-color: #9bdfdf;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-nav .container h2 {
-  color: red;
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: #cfcfcf;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  height: 50px;
+  background-color: #ffffff;
+}
+nav .logo {
+  font-size: 28px;
+  color: #0a002c;
+  font-family: "Kanit", sans-serif;
+  font-weight: normal;
+  padding: 2px 0;
+  width: 400px;
+  text-transform: uppercase;
+}
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  width: 30%;
+  text-transform: capitalize;
+  padding: 15px 0;
+}
+nav ul li {
+  list-style: none;
+}
+nav ul a {
+  color: #0a002c;
+  list-style: none;
+  text-decoration: none;
+}
+nav ul a:hover {
+  content: "";
+  display: block;
+  border-bottom: 3px solid;
+  padding-bottom: 5px;
+  margin-bottom: 10px;
+  border-radius: 1.5px;
 }
 
 /*# sourceMappingURL=style.css.map */
