--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,11 +1,57 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+// file scss
+$f-poppins: "Poppins", sans-serif;
+$f-kanit: "Kanit", sans-serif;
+$color-01: #0a002c;
+$color-02: #ffffff;
+$font-28: 28px;
+$font-18: 18px;
+
 body {
-  background-color: #9bdfdf;
+  font-family: $f-poppins;
+  background-color: #cfcfcf;
 }
 
 nav {
-  .container {
-    h2 {
-      color: red;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  height: 50px;
+  background-color: $color-02;
+  .logo {
+    font-size: $font-28;
+    color: $color-01;
+    font-family: $f-kanit;
+    font-weight: normal;
+    padding: 2px 0;
+    width: 400px;
+    text-transform: uppercase;
+  }
+  ul {
+    display: flex;
+    justify-content: space-between;
+    width: 30%;
+    text-transform: capitalize;
+    padding: 15px 0;
+    li {
+      list-style: none;
+    }
+    a {
+      color: $color-01;
+      list-style: none;
+      text-decoration: none;
+      &:hover {
+        content: "";
+        display: block;
+        border-bottom: 3px solid;
+        padding-bottom: 5px;
+        margin-bottom: 10px;
+        border-radius: 1.5px;
+      }
     }
   }
 }
