--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,8 @@ nav .menu-togle span {
 
 @media screen and (max-width: 670px) {
   nav .logo {
-    width: 280px;
+    margin-top: 3px;
+    width: 300px;
   }
   nav .menu {
     display: none;
