--- a/scss/style.scss
+++ b/scss/style.scss
@@ -78,7 +78,8 @@ nav {
 @media screen and (max-width: 670px) {
   nav {
     .logo {
-      width: 280px;
+      margin-top: 3px;
+      width: 300px;
     }
     .menu {
       display: none;
