--- a/scss/style.scss
+++ b/scss/style.scss
@@ -55,38 +55,65 @@ nav {
     }
   }
 
-  .menu-togle {
+  #menuTogle {
     display: none;
-    margin-top: 13px;
-    flex-direction: column;
-    height: 20px;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+    transition: 0.2s;
 
-    span {
-      display: block;
+    &::before {
+      content: "";
+      position: absolute;
       width: 28px;
-      height: 3px;
-      background-color: $color-01;
       border-radius: 5px;
+      height: 2.5px;
+      background-color: $color-01;
+      transition: 0.2s;
+      transform: translateY(-10px);
+      box-shadow: 0 10px 0 $color-01;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 28px;
+      border-radius: 5px;
+      height: 2.5px;
+      background-color: $color-01;
+      transition: 0.2s;
+      transform: translateY(10px);
+    }
+  }
+  #menuTogle.active {
+    &::before {
+      transform: translateY(0) rotate(45deg);
+      box-shadow: 0 0 0 $color-01;
+    }
+    &::after {
+      transform: translateY(0) rotate(-45deg);
     }
   }
 }
 
 // Tablet
+@media screen and (max-width: 1000px) {
+}
 
 // Smartphone
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 670px) {
   nav {
     .logo {
-      // margin-top: 3px;
       width: 280px;
+      margin-top: 10px;
+      font-size: 20px;
     }
     .menu {
       display: none;
     }
-    .menu-togle {
+    #menuTogle {
       display: flex;
-      cursor: pointer;
     }
   }
 }
