--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 body {
   font-family: "Poppins", sans-serif;
   background-color: #cfcfcf;
+  overflow-x: hidden;
 }
 
 nav {
@@ -21,25 +22,25 @@ nav .logo {
   font-family: "Kanit", sans-serif;
   font-weight: normal;
   padding: 2px 0;
-  width: 400px;
+  width: 300px;
   text-transform: uppercase;
 }
-nav .menu {
+nav ul {
   display: flex;
   justify-content: space-between;
   width: 30%;
   text-transform: capitalize;
   padding: 15px 0;
 }
-nav .menu li {
+nav ul li {
   list-style: none;
 }
-nav .menu a {
+nav ul a {
   color: #0a002c;
   list-style: none;
   text-decoration: none;
 }
-nav .menu a:hover {
+nav ul a:hover {
   content: "";
   display: block;
   border-bottom: 3px solid;
@@ -47,7 +48,7 @@ nav .menu a:hover {
   margin-bottom: 10px;
   border-radius: 1.5px;
 }
-nav #menuTogle {
+nav .menuTogle {
   display: none;
   justify-content: center;
   align-items: center;
@@ -55,7 +56,7 @@ nav #menuTogle {
   cursor: pointer;
   transition: 0.2s;
 }
-nav #menuTogle::before {
+nav .menuTogle::before {
   content: "";
   position: absolute;
   width: 28px;
@@ -66,7 +67,7 @@ nav #menuTogle::before {
   transform: translateY(-10px);
   box-shadow: 0 10px 0 #0a002c;
 }
-nav #menuTogle::after {
+nav .menuTogle::after {
   content: "";
   position: absolute;
   width: 28px;
@@ -76,25 +77,44 @@ nav #menuTogle::after {
   transition: 0.2s;
   transform: translateY(10px);
 }
-nav #menuTogle.active::before {
+nav .menuTogle.active::before {
   transform: translateY(0) rotate(45deg);
   box-shadow: 0 0 0 #0a002c;
 }
-nav #menuTogle.active::after {
+nav .menuTogle.active::after {
   transform: translateY(0) rotate(-45deg);
 }
 
 @media screen and (max-width: 670px) {
+  nav ul {
+    position: absolute;
+    width: 100%;
+    right: 0;
+    top: 0;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100vh;
+    flex-direction: column;
+    background-color: #f0f0f0;
+    z-index: -2;
+    transform: translate(0, -100%);
+    transition: all 0.5s;
+  }
+  nav ul.active {
+    transform: translateX(0);
+  }
   nav .logo {
-    width: 280px;
+    width: 300px;
     margin-top: 10px;
     font-size: 20px;
   }
-  nav .menu {
-    display: none;
-  }
-  nav #menuTogle {
+  nav .menuTogle {
     display: flex;
+  }
+
+  .jumbotron .content.active {
+    transform: translateY(250px);
+    transition: all 1s;
   }
 }
 
