--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,8 @@ $font-18: 18px;
 body {
   font-family: $f-poppins;
   background-color: #cfcfcf;
+  // overflow untuk menyembynikan apa bila ada yg offside
+  overflow-x: hidden;
 }
 
 nav {
@@ -28,10 +30,10 @@ nav {
     font-family: $f-kanit;
     font-weight: normal;
     padding: 2px 0;
-    width: 400px;
+    width: 300px;
     text-transform: uppercase;
   }
-  .menu {
+  ul {
     display: flex;
     justify-content: space-between;
     width: 30%;
@@ -55,7 +57,7 @@ nav {
     }
   }
 
-  #menuTogle {
+  .menuTogle {
     display: none;
     justify-content: center;
     align-items: center;
@@ -86,7 +88,7 @@ nav {
       transform: translateY(10px);
     }
   }
-  #menuTogle.active {
+  .menuTogle.active {
     &::before {
       transform: translateY(0) rotate(45deg);
       box-shadow: 0 0 0 $color-01;
@@ -104,16 +106,34 @@ nav {
 // Smartphone
 @media screen and (max-width: 670px) {
   nav {
+    ul {
+      position: absolute;
+      width: 100%;
+      right: 0;
+      top: 0;
+      justify-content: space-evenly;
+      align-items: center;
+      height: 100vh;
+      flex-direction: column;
+      background-color: #f0f0f0;
+      z-index: -2;
+      transform: translate(0, -100%);
+      transition: all 0.5s;
+    }
+    ul.active {
+      transform: translateX(0);
+    }
     .logo {
-      width: 280px;
+      width: 300px;
       margin-top: 10px;
       font-size: 20px;
     }
-    .menu {
-      display: none;
-    }
-    #menuTogle {
+    .menuTogle {
       display: flex;
     }
+  }
+  .jumbotron .content.active {
+    transform: translateY(250px);
+    transition: all 1s;
   }
 }
