--- a/css/style.css
+++ b/css/style.css
@@ -90,15 +90,27 @@ nav .menuTogle.active::after {
     position: absolute;
     width: 100%;
     right: 0;
-    top: 0;
+    top: 5vh;
     justify-content: space-evenly;
     align-items: center;
-    height: 100vh;
+    height: 50vh;
     flex-direction: column;
     background-color: #f0f0f0;
     z-index: -2;
     transform: translate(0, -100%);
     transition: all 0.5s;
+  }
+  nav ul li {
+    padding: 10px 100%;
+    height: 20px;
+  }
+  nav ul li:hover {
+    background-color: #88e0e0;
+    color: #ffffff;
+  }
+  nav ul li a:hover {
+    color: #ffffff;
+    display: none;
   }
   nav ul.active {
     transform: translateX(0);
@@ -110,11 +122,6 @@ nav .menuTogle.active::after {
   }
   nav .menuTogle {
     display: flex;
-  }
-
-  .jumbotron .content.active {
-    transform: translateY(250px);
-    transition: all 1s;
   }
 }
 
