--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,6 +24,8 @@ nav {
   width: 100%;
   height: 50px;
   background-color: $color-02;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
   .logo {
     font-size: $font-28;
     color: $color-01;
