--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
 }
-
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@200;500&family=Poppins:wght@400;600&display=swap");
 // file scss
 $f-poppins: "Poppins", sans-serif;
 $f-kanit: "Kanit", sans-serif;
@@ -16,24 +16,31 @@ body {
   background-color: #cfcfcf;
   // overflow untuk menyembynikan apa bila ada yg offside
   overflow-x: hidden;
+  margin-bottom: 1000px;
 }
 
 nav {
   display: flex;
+  position: fixed;
   justify-content: space-around;
   width: 100%;
-  height: 50px;
-  background-color: $color-02;
+  height: 60px;
+  background: rgba(255, 255, 255, 0.25);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  z-index: 10;
   .logo {
     font-size: $font-28;
     color: $color-01;
     font-family: $f-kanit;
-    font-weight: normal;
-    padding: 2px 0;
+    font-weight: 400;
+    padding-top: 8px;
+    align-items: center;
     width: 300px;
-    text-transform: uppercase;
+    text-transform: capitalize;
   }
   ul {
     display: flex;
@@ -101,6 +108,52 @@ nav {
   }
 }
 
+.jumbotron {
+  width: 100%;
+  height: 575px;
+  background-image: url("/assets/img/banner-bg-01.jpg");
+  background-size: cover;
+  &::after {
+    content: "";
+    display: block;
+    width: 75%;
+    height: 100%;
+    background-image: linear-gradient(
+      to right,
+      rgb(250, 250, 255),
+      rgba(0, 0, 0, 0)
+    );
+    position: relative;
+    bottom: 0;
+  }
+  .content {
+    position: absolute;
+    color: $color-01;
+    margin: 25vh 12%;
+    font-family: $f-poppins;
+    z-index: 1;
+    h1 {
+      font-weight: 600;
+      font-size: 2.8em;
+      text-transform: capitalize;
+    }
+    h3 {
+      font-size: 1.5em;
+      font-weight: 700;
+      margin-top: -10px;
+    }
+    p {
+      display: block;
+      // background-color: $color-02;
+      color: #464646;
+      width: 390px;
+      word-spacing: 4px;
+      font-size: 18px;
+      margin-top: 20px;
+    }
+  }
+}
+
 // Tablet
 @media screen and (max-width: 1000px) {
 }
@@ -108,22 +161,32 @@ nav {
 // Smartphone
 @media screen and (max-width: 670px) {
   nav {
+    position: unset;
+    background-color: #ffffff;
+    backdrop-filter: inherit;
     ul {
       position: absolute;
       width: 100%;
       right: 0;
-      top: 3vh;
+      top: 8vh;
       justify-content: space-evenly;
-      align-items: center;
-      height: 50vh;
+      text-align: center;
       flex-direction: column;
-      background-color: #f0f0f0;
-      z-index: -2;
+      background: rgba(58, 145, 210, 0.25);
+      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+      backdrop-filter: blur(4px);
+      -webkit-backdrop-filter: blur(6px);
+      border: 1px solid rgba(255, 255, 255, 0.18);
       transform: translate(0, -100%);
       transition: all 0.5s;
+      z-index: -1;
       li {
-        padding: 15px 46%;
+        position: relative;
+        padding: 15px 45%;
         height: 30px;
+        font-size: 20px;
+        font-weight: 600;
+        z-index: 20;
         &:hover {
           background-color: #88e0e0;
           color: $color-02;
@@ -138,6 +201,7 @@ nav {
     }
     ul.active {
       transform: translateX(0);
+      z-index: -10;
     }
     .logo {
       width: 300px;
@@ -146,6 +210,33 @@ nav {
     }
     .menuTogle {
       display: flex;
+    }
+  }
+
+  section {
+    position: relative;
+    z-index: -20;
+    .jumbotron {
+      position: absolute;
+      height: 380px;
+      background-position-x: -50px;
+      &::after {
+        width: 100%;
+        background-image: linear-gradient(
+          to bottom,
+          rgb(250, 250, 255),
+          rgba(0, 0, 0, 0)
+        );
+      }
+      .content {
+        width: 100%;
+        margin: 70px auto;
+        text-align: center;
+        p {
+          display: block;
+          margin: 0 auto;
+        }
+      }
     }
   }
 }
