--- a/scss/style.scss
+++ b/scss/style.scss
@@ -111,7 +111,7 @@ nav {
 .jumbotron {
   width: 100%;
   height: 575px;
-  background-image: url("/assets/img/banner-bg-01.jpg");
+  background-image: url("../assets/img/banner-bg-01.jpg");
   background-size: cover;
   &::after {
     content: "";
