--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,6 @@ nav {
   justify-content: space-around;
   width: 100%;
   height: 60px;
-  background: rgba(255, 255, 255, 0.25);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border: 1px solid rgba(255, 255, 255, 0.18);
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
   z-index: 10;
 }
 nav .logo {
@@ -45,7 +40,7 @@ nav ul li {
   list-style: none;
 }
 nav ul a {
-  color: #0a002c;
+  color: #ffffff;
   list-style: none;
   text-decoration: none;
 }
@@ -97,7 +92,7 @@ nav .menuTogle.active::after {
 .jumbotron {
   width: 100%;
   height: 575px;
-  background-image: url("/assets/img/banner-bg-01.jpg");
+  background-image: url("../assets/img/banner.png");
   background-size: cover;
 }
 .jumbotron::after {
@@ -158,6 +153,9 @@ nav .menuTogle.active::after {
     transition: all 0.5s;
     z-index: -1;
   }
+  nav ul a {
+    color: #0a002c;
+  }
   nav ul li {
     position: relative;
     padding: 15px 45%;
@@ -168,10 +166,8 @@ nav .menuTogle.active::after {
   }
   nav ul li:hover {
     background-color: #88e0e0;
-    color: #ffffff;
   }
   nav ul li a:hover {
-    color: #ffffff;
     display: none;
   }
   nav ul.active {
