--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,12 +25,12 @@ nav {
   justify-content: space-around;
   width: 100%;
   height: 60px;
-  background: rgba(255, 255, 255, 0.25);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border: 1px solid rgba(255, 255, 255, 0.18);
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  // background: rgba(255, 255, 255, 0.25);
+  // backdrop-filter: blur(4px);
+  // -webkit-backdrop-filter: blur(4px);
+  // border: 1px solid rgba(255, 255, 255, 0.18);
+  // box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+  //   rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
   z-index: 10;
   .logo {
     font-size: $font-28;
@@ -52,7 +52,7 @@ nav {
       list-style: none;
     }
     a {
-      color: $color-01;
+      color: $color-02;
       list-style: none;
       text-decoration: none;
       &:hover {
@@ -111,7 +111,7 @@ nav {
 .jumbotron {
   width: 100%;
   height: 575px;
-  background-image: url("/assets/img/banner-bg-01.jpg");
+  background-image: url("../assets/img/banner.png");
   background-size: cover;
   &::after {
     content: "";
@@ -180,6 +180,9 @@ nav {
       transform: translate(0, -100%);
       transition: all 0.5s;
       z-index: -1;
+      a {
+        color: $color-01;
+      }
       li {
         position: relative;
         padding: 15px 45%;
@@ -189,11 +192,9 @@ nav {
         z-index: 20;
         &:hover {
           background-color: #88e0e0;
-          color: $color-02;
         }
         a {
           &:hover {
-            color: $color-02;
             display: none;
           }
         }
