--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,210 @@
-/* Error: expected "{".
- *     ,
- * 115 |   background-image: url("../assets/img/banner.png");
- *     |                                                    ^
- *     '
- *   scss\style.scss 115:52  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: 'Error: expected "{".\a     \2577 \a 115 \2502    background-image: url("../assets/img/banner.png");\d\a     \2502                                                     ^\a     \2575 \a   scss\\style.scss 115:52  root stylesheet';
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@200;500&family=Poppins:wght@400;600&display=swap");
+* {
+  margin: 0;
+  padding: 0;
 }
+
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: #cfcfcf;
+  overflow-x: hidden;
+  margin-bottom: 1000px;
+}
+
+nav {
+  display: flex;
+  position: fixed;
+  justify-content: space-around;
+  width: 100%;
+  height: 60px;
+  z-index: 10;
+}
+nav .logo {
+  font-size: 28px;
+  color: #0a002c;
+  font-family: "Kanit", sans-serif;
+  font-weight: 400;
+  padding-top: 8px;
+  align-items: center;
+  width: 300px;
+  text-transform: capitalize;
+}
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  width: 30%;
+  text-transform: capitalize;
+  padding: 15px 0;
+}
+nav ul li {
+  list-style: none;
+}
+nav ul a {
+  color: #ffffff;
+  list-style: none;
+  text-decoration: none;
+}
+nav ul a:hover {
+  content: "";
+  display: block;
+  border-bottom: 3px solid;
+  padding-bottom: 5px;
+  margin-bottom: 10px;
+  border-radius: 1.5px;
+}
+nav .menuTogle {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+  transition: 0.2s;
+}
+nav .menuTogle::before {
+  content: "";
+  position: absolute;
+  width: 28px;
+  border-radius: 5px;
+  height: 2.5px;
+  background-color: #0a002c;
+  transition: 0.2s;
+  transform: translateY(-10px);
+  box-shadow: 0 10px 0 #0a002c;
+}
+nav .menuTogle::after {
+  content: "";
+  position: absolute;
+  width: 28px;
+  border-radius: 5px;
+  height: 2.5px;
+  background-color: #0a002c;
+  transition: 0.2s;
+  transform: translateY(10px);
+}
+nav .menuTogle.active::before {
+  transform: translateY(0) rotate(45deg);
+  box-shadow: 0 0 0 #0a002c;
+}
+nav .menuTogle.active::after {
+  transform: translateY(0) rotate(-45deg);
+}
+
+.jumbotron {
+  width: 100%;
+  height: 575px;
+  background-image: url("../assets/img/banner.png");
+  background-size: cover;
+}
+.jumbotron::after {
+  content: "";
+  display: block;
+  width: 75%;
+  height: 100%;
+  background-image: linear-gradient(to right, #fafaff, rgba(0, 0, 0, 0));
+  position: relative;
+  bottom: 0;
+}
+.jumbotron .content {
+  position: absolute;
+  color: #0a002c;
+  margin: 25vh 12%;
+  font-family: "Poppins", sans-serif;
+  z-index: 1;
+}
+.jumbotron .content h1 {
+  font-weight: 600;
+  font-size: 2.8em;
+  text-transform: capitalize;
+}
+.jumbotron .content h3 {
+  font-size: 1.5em;
+  font-weight: 700;
+  margin-top: -10px;
+}
+.jumbotron .content p {
+  display: block;
+  color: #464646;
+  width: 390px;
+  word-spacing: 4px;
+  font-size: 18px;
+  margin-top: 20px;
+}
+
+@media screen and (max-width: 670px) {
+  nav {
+    position: unset;
+    background-color: #ffffff;
+    backdrop-filter: inherit;
+  }
+  nav ul {
+    position: absolute;
+    width: 100%;
+    right: 0;
+    top: 8vh;
+    justify-content: space-evenly;
+    text-align: center;
+    flex-direction: column;
+    background: rgba(58, 145, 210, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(6px);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    transform: translate(0, -100%);
+    transition: all 0.5s;
+    z-index: -1;
+  }
+  nav ul a {
+    color: #0a002c;
+  }
+  nav ul li {
+    position: relative;
+    padding: 15px 45%;
+    height: 30px;
+    font-size: 20px;
+    font-weight: 600;
+    z-index: 20;
+  }
+  nav ul li:hover {
+    background-color: #88e0e0;
+  }
+  nav ul li a:hover {
+    display: none;
+  }
+  nav ul.active {
+    transform: translateX(0);
+    z-index: -10;
+  }
+  nav .logo {
+    width: 300px;
+    margin-top: 10px;
+    font-size: 20px;
+  }
+  nav .menuTogle {
+    display: flex;
+  }
+
+  section {
+    position: relative;
+    z-index: -20;
+  }
+  section .jumbotron {
+    position: absolute;
+    height: 380px;
+    background-position-x: -50px;
+  }
+  section .jumbotron::after {
+    width: 100%;
+    background-image: linear-gradient(to bottom, #fafaff, rgba(0, 0, 0, 0));
+  }
+  section .jumbotron .content {
+    width: 100%;
+    margin: 70px auto;
+    text-align: center;
+  }
+  section .jumbotron .content p {
+    display: block;
+    margin: 0 auto;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
