--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,10 +20,10 @@ body {
 }
 
 nav {
+  width: 100%;
   display: flex;
   position: fixed;
   justify-content: space-around;
-  width: 100%;
   height: 60px;
   // background: rgba(255, 255, 255, 0.25);
   // backdrop-filter: blur(4px);
@@ -155,7 +155,19 @@ nav {
 }
 
 // Tablet
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 920px) {
+  nav {
+    ul {
+      width: 40%;
+    }
+  }
+  .jumbotron {
+    background-position-x: -80px;
+    height: 42vh;
+    .content {
+      margin: 100px 60px;
+    }
+  }
 }
 
 // Smartphone
@@ -173,10 +185,8 @@ nav {
       text-align: center;
       flex-direction: column;
       background: rgba(58, 145, 210, 0.25);
-      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
       backdrop-filter: blur(4px);
       -webkit-backdrop-filter: blur(6px);
-      border: 1px solid rgba(255, 255, 255, 0.18);
       transform: translate(0, -100%);
       transition: all 0.5s;
       z-index: -1;
@@ -236,6 +246,33 @@ nav {
         p {
           display: block;
           margin: 0 auto;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 410px) {
+  nav {
+    ul {
+      top: 6vh;
+      align-items: center;
+    }
+  }
+  section {
+    .jumbotron {
+      width: 100%;
+      height: 320px;
+      background-position-x: -300px;
+      .content {
+        margin-top: 50px;
+        h1,
+        h3,
+        p {
+          font-size: 0.8em;
+        }
+        h1 {
+          font-size: 2em;
         }
       }
     }
