--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body {
   background-color: #cfcfcf;
   overflow-x: hidden;
   margin-bottom: 1000px;
-  max-width: 100%;
 }
 
 nav {
@@ -220,11 +219,11 @@ nav .menuTogle.active::after {
 }
 @media screen and (max-width: 420px) {
   nav ul {
+    top: 5vh;
     align-items: center;
   }
 
   section .jumbotron {
-    width: 100%;
     height: 320px;
     background-position-x: -300px;
   }
