--- a/scss/style.scss
+++ b/scss/style.scss
@@ -184,9 +184,10 @@ nav {
       // justify-content: space-evenly;
       text-align: center;
       flex-direction: column;
-      background: rgba(58, 145, 210, 0.25);
+      background: rgba(3, 0, 12, 0.25);
       backdrop-filter: blur(4px);
-      -webkit-backdrop-filter: blur(6px);
+      -webkit-backdrop-filter: blur(4px);
+      border: 1px solid rgba(255, 255, 255, 0.18);
       transform: translate(0, -100%);
       transition: all 0.5s;
       z-index: -1;
@@ -201,7 +202,12 @@ nav {
         font-weight: 600;
         z-index: 20;
         &:hover {
-          background-color: #88e0e0;
+          background: rgb(205, 250, 250);
+          background: linear-gradient(
+            0deg,
+            rgba(205, 250, 250, 1) 0%,
+            rgba(136, 224, 224, 1) 100%
+          );
         }
         a {
           &:hover {
