--- a/scss/style.scss
+++ b/scss/style.scss
@@ -155,6 +155,15 @@ nav {
 }
 
 // Tablet
+@media screen and (max-width: 1080px) {
+  section {
+    .content {
+      left: -20px;
+      top: 50px;
+    }
+  }
+}
+
 @media screen and (max-width: 920px) {
   nav {
     ul {
