--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,20 @@ nav .menuTogle.active::after {
   transform: translateY(0) rotate(-45deg);
 }
 
+nav.sticky {
+  width: 100%;
+  height: 60px;
+  background: rgba(255, 255, 255, 0.25);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+}
+nav.sticky ul li a {
+  color: #0a002c;
+  font-weight: 600;
+}
+
 .jumbotron {
   width: 100%;
   height: 575px;
@@ -192,6 +206,11 @@ nav .menuTogle.active::after {
   }
   nav .menuTogle {
     display: flex;
+  }
+
+  nav.sticky {
+    display: none;
+    transition: 2s;
   }
 
   section {
