--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,13 +25,8 @@ nav {
   position: fixed;
   justify-content: space-around;
   height: 60px;
-  // background: rgba(255, 255, 255, 0.25);
-  // backdrop-filter: blur(4px);
-  // -webkit-backdrop-filter: blur(4px);
-  // border: 1px solid rgba(255, 255, 255, 0.18);
-  // box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-  //   rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
   z-index: 10;
+
   .logo {
     font-size: $font-28;
     color: $color-01;
@@ -104,6 +99,25 @@ nav {
     }
     &::after {
       transform: translateY(0) rotate(-45deg);
+    }
+  }
+}
+
+nav.sticky {
+  width: 100%;
+  height: 60px;
+  background: rgba(255, 255, 255, 0.25);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  ul {
+    li {
+      a {
+        color: $color-01;
+        font-weight: 600;
+      }
     }
   }
 }
@@ -230,6 +244,10 @@ nav {
       display: flex;
     }
   }
+  nav.sticky {
+    display: none;
+    transition: 2s;
+  }
 
   section {
     position: relative;
@@ -269,6 +287,7 @@ nav {
       }
     }
   }
+
   section {
     .jumbotron {
       height: 320px;
