--- a/css/style.css
+++ b/css/style.css
@@ -130,10 +130,35 @@ nav.sticky ul li a {
   font-size: 2.8em;
   text-transform: capitalize;
 }
+.jumbotron .content h1 span {
+  color: #107020;
+}
 .jumbotron .content h3 {
   font-size: 1.5em;
   font-weight: 700;
   margin-top: -10px;
+}
+.jumbotron .content h3 span.cursor {
+  display: inline-block;
+  width: 2px;
+  height: 1.3em;
+  background-color: #0a002c;
+  margin-left: -0.2rem;
+  animation: blink 1s infinite;
+}
+.jumbotron .content h3 span.typing {
+  animation: none;
+}
+@keyframes blink {
+  0% {
+    background-color: #0a002c;
+  }
+  50% {
+    background-color: transparent;
+  }
+  100% {
+    background-color: #0a002c;
+  }
 }
 .jumbotron .content p {
   display: block;
@@ -260,6 +285,9 @@ section .jumbotron .content p {
   section .jumbotron .content h1 {
     font-size: 1.8em;
     margin-bottom: 5px;
+  }
+  section .jumbotron .content h3 {
+    font-size: 1em;
   }
   section .jumbotron .content p {
     margin-top: 12px;
