--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -120,12 +120,12 @@
           .content-frontend {
             margin-bottom: 5vh;
             .frontend {
-              width: 85vh;
+              width: 100%;
             }
           }
           .content-desain {
             .desain {
-              width: 85vh;
+              width: 100%;
             }
           }
         }
@@ -192,7 +192,7 @@
           .content-frontend {
             margin-bottom: 5vh;
             .frontend {
-              width: 67vh;
+              width: 100%;
               .f-code {
                 h2 {
                   padding-right: 10px;
@@ -202,7 +202,7 @@
           }
           .content-desain {
             .desain {
-              width: 67vh;
+              width: 100%;
               .d-code {
                 h2 {
                   padding-right: 10px;
