--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -176,6 +176,9 @@
       .about {
         margin-bottom: -50px;
         .content-about {
+          img {
+            width: 30vh;
+          }
           .text-about {
             font-size: 0.8em;
             .project-about {
