--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -19,6 +19,7 @@ $font-18: 18px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
+
 @mixin grd-color() {
   background: rgb(205, 250, 250);
   background: linear-gradient(
@@ -27,11 +28,13 @@ $font-18: 18px;
     rgba(136, 224, 224, 1) 100%
   );
 }
+
 @mixin judul-h3() {
   font-family: $f-poppins;
   font-weight: normal;
   font-size: 1.3em;
   color: $color-grey;
+
   span {
     display: block;
     border-bottom: 0.1rem solid $color-03;
@@ -77,6 +80,7 @@ $font-18: 18px;
 @mixin img-skill {
   img {
     width: 1.8em;
+
     // padding-right: 50px;
     // background-color: bisque;
     &.dropbtn {
@@ -85,6 +89,7 @@ $font-18: 18px;
       width: 1.5em;
       // background-color: bisque;
     }
+
     &.dropDesain {
       cursor: pointer;
       margin-left: 40%;
@@ -96,10 +101,12 @@ $font-18: 18px;
 @mixin display-probar {
   display: flex;
   justify-content: space-between;
+
   p {
     padding-left: 10px;
   }
 }
+
 @mixin probar() {
   display: inline-block;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
@@ -109,6 +116,7 @@ $font-18: 18px;
   width: 70%;
   padding: 3px;
 }
+
 @mixin nth-probar($width) {
   background-color: $color-03;
   width: $width;
@@ -118,4 +126,88 @@ $font-18: 18px;
 
 @mixin res-skill() {
   width: 94%;
+}
+
+@mixin port-col {
+  // display: block;
+}
+@mixin port-banner {
+  position: relative;
+  // max-width: 800em;
+  // width: 100%;
+  height: 280px;
+  // background-color: rgb(241, 241, 2);
+  z-index: 2;
+  img {
+    border-radius: 10px 10px 0px 0px;
+    width: 100%;
+    height: 250px;
+  }
+}
+
+@mixin port-content {
+  display: block;
+  // max-width: 260px;
+  width: 90%;
+  // background-color: yellow;
+  margin-left: 15px;
+  h3 {
+    text-align: left;
+    font-weight: normal;
+    font-family: $f-kanit;
+    color: $color-03;
+    text-transform: capitalize;
+    font-size: 1.6em;
+  }
+  p {
+    display: inline-block;
+    text-align: left;
+    
+    width: auto;
+    font-size: 0.9em;
+    // background-color: bisque;
+  }
+  h4 {
+    display: flex;
+    // justify-content: center;
+    // background-color: chartreuse;
+    font-size: 0.9em;
+    margin-top: 20px;
+    text-transform: capitalize;
+    a {
+      font-weight: normal;
+      color: #0000ff;
+      text-decoration: none;
+    }
+    img {
+      margin-left: 8px;
+      width: 15px;
+      height: auto;
+    }
+  }
+}
+@mixin cont-670 {
+  width: auto;
+  p {
+    font-size: 1.1em;
+  }
+  h4 {
+    margin-top: 10px;
+  }
+}
+
+@mixin cont-420 {
+  p {
+    display: block;
+    width: 95%;
+    // background-color: lawngreen;
+    font-size: 0.8em;
+  }
+  h4 {
+    font-size: 0.7em;
+    margin-top: 12px;
+    img {
+      width: 10px;
+    }
+  }
 }
