--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,6 +25,7 @@ nav {
   justify-content: space-around;
   height: 60px;
   z-index: 100;
+
   &.sticky {
     @include grd-transparant($bg-color-grey);
     width: 100%;
@@ -39,6 +40,7 @@ nav {
       }
     }
   }
+
   .logo {
     font-size: $font-28;
     color: $color-01;
@@ -48,11 +50,13 @@ nav {
     align-items: center;
     width: 400px;
     text-transform: capitalize;
+
     span {
       display: block;
       border-bottom: 0.4rem solid $color-03;
       padding-bottom: 0.1vh;
       width: 3em;
+
       &::after {
         content: "";
         position: absolute;
@@ -64,19 +68,23 @@ nav {
       }
     }
   }
+
   ul {
     display: flex;
     justify-content: space-between;
     width: 30%;
     text-transform: capitalize;
     padding: 15px 0;
+
     li {
       list-style: none;
     }
+
     a {
       color: $color-02;
       list-style: none;
       text-decoration: none;
+
       &:hover {
         content: "";
         display: block;
@@ -95,11 +103,13 @@ nav {
     position: relative;
     cursor: pointer;
     transition: 0.2s;
+
     &.active {
       &::before {
         transform: translateY(0) rotate(45deg);
         box-shadow: 0 0 0 $color-01;
       }
+
       &::after {
         transform: translateY(0) rotate(-45deg);
       }
@@ -116,6 +126,7 @@ nav {
       transform: translateY(-10px);
       box-shadow: 0 10px 0 $color-01;
     }
+
     &::after {
       content: "";
       position: absolute;
@@ -134,6 +145,7 @@ nav {
   height: 560px;
   background-image: url("../assets/img/banner.png");
   background-size: cover;
+
   &::after {
     content: "";
     display: block;
@@ -150,24 +162,29 @@ nav {
     z-index: 1;
     bottom: 0;
   }
+
   .content {
     position: absolute;
     color: $color-01;
     margin: 25vh 10%;
     font-family: $f-poppins;
     z-index: 5;
+
     h1 {
       font-weight: 600;
       font-size: 3.2em;
       text-transform: capitalize;
+
       span {
         color: $color-03;
       }
     }
+
     h3 {
       font-size: 1.8em;
       font-weight: 700;
       margin-top: -10px;
+
       span {
         &.cursor {
           display: inline-block;
@@ -177,22 +194,27 @@ nav {
           margin-left: -0.2rem;
           animation: blink 1s infinite;
         }
+
         &.typing {
           animation: none;
         }
+
         @keyframes blink {
           0% {
             background-color: $color-01;
           }
+
           50% {
             background-color: transparent;
           }
+
           100% {
             background-color: $color-01;
           }
         }
       }
     }
+
     p {
       display: block;
       color: #464646;
@@ -208,11 +230,14 @@ nav {
 section {
   .container {
     margin-top: 30vh;
+
     .about {
       text-align: center;
+
       h1 {
         @include judul-h1();
       }
+
       h3 {
         @include judul-h3();
       }
@@ -225,14 +250,17 @@ section {
             rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
             rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
         }
+
         margin-top: 12vh;
         display: flex;
         justify-content: center;
+
         .text-about {
           // background-color: lightblue;
           margin-left: 100px;
           width: 100vh;
           text-align: left;
+
           button {
             font-family: $f-poppins;
             font-size: 1.2em;
@@ -243,33 +271,40 @@ section {
             color: $color-02;
             cursor: pointer;
             box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+
             &:active {
               position: relative;
               top: 7px;
               box-shadow: none;
             }
+
             &:hover {
               background-color: #00a149;
             }
+
             img {
               border-radius: unset;
               box-shadow: unset;
               color: $color-02 !important;
               width: 0.9em;
               margin-left: 10px;
+
               svg path {
                 fill: ivory;
               }
             }
           }
+
           .project-about {
             display: flex;
             margin: 10vh 0;
             justify-content: space-between;
+
             // background-color: bisque;
             h1 {
               font-family: $f-poppins;
             }
+
             p {
               display: block;
               width: 6em;
@@ -280,36 +315,45 @@ section {
         }
       }
     }
+
     .skills {
       margin-top: 30vh;
+
       .content-skill {
         text-align: center;
+
         h1 {
           @include judul-h1();
         }
+
         h3 {
           @include judul-h3();
         }
+
         .warp-content {
           width: 100%;
           display: flex;
           justify-content: space-around;
           margin-top: 20vh;
         }
+
         .content-frontend {
           .frontend {
             @include shadow-skills();
+
             .f-code {
               // background-color: #00a149;
               display: flex;
               justify-content: space-around;
               @include img-skill();
+
               h2 {
                 padding-right: 50px;
                 // background-color: aquamarine;
               }
             }
           }
+
           // dropdown frontend
           .dropdown-content {
             display: none;
@@ -320,6 +364,7 @@ section {
             // transition: 1s;
             text-align: left;
             z-index: 1;
+
             // background-color: aqua;
             // .warp-contents {
             //   display: flex;
@@ -330,6 +375,7 @@ section {
 
               .probar {
                 @include probar();
+
                 .nth-probar {
                   @include nth-probar(85%);
                 }
@@ -338,9 +384,11 @@ section {
 
             .css {
               @include display-probar;
+
               .probar {
                 // margin-right: 80px;
                 @include probar();
+
                 .nth-probar {
                   @include nth-probar(80%);
                 }
@@ -349,69 +397,89 @@ section {
 
             .js {
               @include display-probar;
+
               .probar {
                 // margin-right: 80px;
                 @include probar();
+
                 .nth-probar {
                   @include nth-probar(60%);
                 }
               }
             }
+
             .sass {
               @include display-probar;
+
               .probar {
                 // margin-right: 80px;
                 @include probar();
+
                 .nth-probar {
                   @include nth-probar(80%);
                 }
               }
             }
+
             .react {
               @include display-probar;
+
               .probar {
                 // margin-right: 80px;
                 @include probar();
+
                 .nth-probar {
                   @include nth-probar(50%);
                 }
               }
             }
+
             .react {
               @include display-probar;
+
               .probar {
                 // margin-right: 80px;
                 @include probar();
+
                 .nth-probar {
                   @include nth-probar(50%);
                 }
               }
             }
+
             .bootstrap {
               @include display-probar;
+
               .probar {
                 // margin-right: 80px;
                 @include probar();
+
                 .nth-probar {
                   @include nth-probar(70%);
                 }
               }
             }
+
             .github {
               @include display-probar;
+
               .probar {
                 // margin-right: 80px;
                 @include probar();
+
                 .nth-probar {
                   @include nth-probar(50%);
                 }
               }
             }
+
             .restapi {
               @include display-probar;
+
               .probar {
                 // margin-right: 80px;
                 @include probar();
+
                 .nth-probar {
                   @include nth-probar(30%);
                 }
@@ -423,18 +491,22 @@ section {
           .show {
             display: block;
           }
+
           // akhir dropdown frontend
         }
+
         .content-desain {
           // awal dropdown desain
           .desain {
             @include shadow-skills();
+
             // background-color: chartreuse;
             .d-code {
               // background-color: cyan;
               display: flex;
               justify-content: space-around;
               @include img-skill();
+
               h2 {
                 padding-right: 50px;
               }
@@ -449,44 +521,56 @@ section {
             min-width: 160px;
             text-align: left;
             z-index: 1;
+
             .figma {
               @include display-probar;
+
               // background-color: darkgray;
               .probar {
                 @include probar();
+
                 .nth-probar {
                   // background-color: #f6faff;
                   @include nth-probar(85%);
                 }
               }
             }
+
             .adxd {
               @include display-probar;
+
               // background-color: darkgray;
               .probar {
                 @include probar();
+
                 .nth-probar {
                   // background-color: #f6faff;
                   @include nth-probar(80%);
                 }
               }
             }
+
             .ai {
               @include display-probar;
+
               // background-color: darkgray;
               .probar {
                 @include probar();
+
                 .nth-probar {
                   // background-color: #f6faff;
                   @include nth-probar(85%);
                 }
               }
             }
+
             .ps {
               @include display-probar;
+
               // background-color: darkgray;
               .probar {
                 @include probar();
+
                 .nth-probar {
                   // background-color: #f6faff;
                   @include nth-probar(60%);
@@ -494,8 +578,78 @@ section {
               }
             }
           }
+
           .showDesain {
             display: block;
+          }
+        }
+      }
+    }
+  }
+
+  // portofolio
+  .portfolio {
+    .container {
+      .text {
+      }
+
+      .warp-card {
+        display: flex;
+        justify-content: space-around;
+
+        .row {
+          display: block;
+          width: 25%;
+          margin-top: 10vh;
+          height: auto;
+          height: 400px;
+          cursor: pointer;
+          border-radius: 10px;
+          background-color: #f6faff;
+          box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+            rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+            rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+
+          &:hover {
+            transform: scale(1.02);
+            transition: 0.5s;
+          }
+          .col-01 {
+            @include port-col;
+
+            .back-banner {
+              @include port-banner;
+            }
+
+            .content {
+              width: auto;
+              // background-color: #00a149;
+              @include port-content;
+            }
+          }
+
+          .col-02 {
+            @include port-col;
+
+            .back-banner {
+              @include port-banner;
+            }
+
+            .content {
+              @include port-content;
+            }
+          }
+
+          .col-03 {
+            @include port-col;
+
+            .back-banner {
+              @include port-banner;
+            }
+
+            .content {
+              @include port-content;
+            }
           }
         }
       }
